--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,2 +1,115 @@
 /* For information on how to create your own theme, please see:
 http://ionicframework.com/docs/theming/ */
+
+:root {
+	--ion-color-primary: #BEA68A;
+	--ion-color-primary-rgb: 190,166,138;
+	--ion-color-primary-contrast: #000000;
+	--ion-color-primary-contrast-rgb: 0,0,0;
+	--ion-color-primary-shade: #a79279;
+	--ion-color-primary-tint: #c5af96;
+
+	--ion-color-secondary: #DDCDB9;
+	--ion-color-secondary-rgb: 221,205,185;
+	--ion-color-secondary-contrast: #000000;
+	--ion-color-secondary-contrast-rgb: 0,0,0;
+	--ion-color-secondary-shade: #c2b4a3;
+	--ion-color-secondary-tint: #e0d2c0;
+
+	--ion-color-tertiary: #f0e6db;
+	--ion-color-tertiary-rgb: 240,230,219;
+	--ion-color-tertiary-contrast: #000000;
+	--ion-color-tertiary-contrast-rgb: 0,0,0;
+	--ion-color-tertiary-shade: #d3cac1;
+	--ion-color-tertiary-tint: #f2e9df;
+
+	--ion-color-success: #81cf96;
+	--ion-color-success-rgb: 129,207,150;
+	--ion-color-success-contrast: #000000;
+	--ion-color-success-contrast-rgb: 0,0,0;
+	--ion-color-success-shade: #72b684;
+	--ion-color-success-tint: #8ed4a1;
+
+	--ion-color-warning: #f0cc56;
+	--ion-color-warning-rgb: 240,204,86;
+	--ion-color-warning-contrast: #000000;
+	--ion-color-warning-contrast-rgb: 0,0,0;
+	--ion-color-warning-shade: #d3b44c;
+	--ion-color-warning-tint: #f2d167;
+
+	--ion-color-danger: #DC8383;
+	--ion-color-danger-rgb: 220,131,131;
+	--ion-color-danger-contrast: #000000;
+	--ion-color-danger-contrast-rgb: 0,0,0;
+	--ion-color-danger-shade: #c27373;
+	--ion-color-danger-tint: #e08f8f;
+
+	--ion-color-light: #f7f7f7;
+	--ion-color-light-rgb: 247,247,247;
+	--ion-color-light-contrast: #000000;
+	--ion-color-light-contrast-rgb: 0,0,0;
+	--ion-color-light-shade: #d9d9d9;
+	--ion-color-light-tint: #f8f8f8;
+
+	--ion-color-medium: #5f5f5f;
+	--ion-color-medium-rgb: 95,95,95;
+	--ion-color-medium-contrast: #ffffff;
+	--ion-color-medium-contrast-rgb: 255,255,255;
+	--ion-color-medium-shade: #545454;
+	--ion-color-medium-tint: #6f6f6f;
+
+	--ion-color-dark: #1A1A1A;
+	--ion-color-dark-rgb: 26,26,26;
+	--ion-color-dark-contrast: #ffffff;
+	--ion-color-dark-contrast-rgb: 255,255,255;
+	--ion-color-dark-shade: #171717;
+	--ion-color-dark-tint: #313131;
+
+
+
+	--ion-background-color: #ffffff;
+	--ion-background-color-rgb: 255,255,255;
+
+	--ion-text-color: #0D0C0C;
+	--ion-text-color-rgb: 13,12,12;
+
+	--ion-text-color-step-50: #191818;
+	--ion-text-color-step-100: #252424;
+	--ion-text-color-step-150: #313030;
+	--ion-text-color-step-200: #3d3d3d;
+	--ion-text-color-step-250: #4a4949;
+	--ion-text-color-step-300: #565555;
+	--ion-text-color-step-350: #626161;
+	--ion-text-color-step-400: #6e6d6d;
+	--ion-text-color-step-450: #7a7979;
+	--ion-text-color-step-500: #868686;
+	--ion-text-color-step-550: #929292;
+	--ion-text-color-step-600: #9e9e9e;
+	--ion-text-color-step-650: #aaaaaa;
+	--ion-text-color-step-700: #b6b6b6;
+	--ion-text-color-step-750: #c3c2c2;
+	--ion-text-color-step-800: #cfcece;
+	--ion-text-color-step-850: #dbdbdb;
+	--ion-text-color-step-900: #e7e7e7;
+	--ion-text-color-step-950: #f3f3f3;
+
+	--ion-background-color-step-50: #f3f3f3;
+	--ion-background-color-step-100: #e7e7e7;
+	--ion-background-color-step-150: #dbdbdb;
+	--ion-background-color-step-200: #cfcece;
+	--ion-background-color-step-250: #c3c2c2;
+	--ion-background-color-step-300: #b6b6b6;
+	--ion-background-color-step-350: #aaaaaa;
+	--ion-background-color-step-400: #9e9e9e;
+	--ion-background-color-step-450: #929292;
+	--ion-background-color-step-500: #868686;
+	--ion-background-color-step-550: #7a7979;
+	--ion-background-color-step-600: #6e6d6d;
+	--ion-background-color-step-650: #626161;
+	--ion-background-color-step-700: #565555;
+	--ion-background-color-step-750: #4a4949;
+	--ion-background-color-step-800: #3d3d3d;
+	--ion-background-color-step-850: #313030;
+	--ion-background-color-step-900: #252424;
+	--ion-background-color-step-950: #191818;
+}
