--- a/src/theme/elements.css
+++ b/src/theme/elements.css
@@ -91,3 +91,43 @@
 	opacity: .8;
 }
 /* notifications */
+
+
+/* bottom-tabs */
+.bottom-tabs {
+	position: fixed;
+	z-index: 2;
+	width: fit-content;
+	bottom: 28px;
+	left: 50%;
+	transform: translateX(-50%);
+	background: var(--ion-color-primary);
+	padding: 6px;
+	display: flex;
+	align-items: center;
+	gap: 18px;
+	border-radius: 48px;
+	color: #fff;
+}
+.bottom-tab__icon {
+	width: 54px;
+	height: 54px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	transition: .2s ease-out;
+}
+
+.bottom-tab__icon svg {
+	display: block;
+}
+
+.bottom-tab--active .bottom-tab__icon {
+	background: #fff;
+}
+
+.bottom-tab--active .bottom-tab__icon svg path {
+	fill: #0D0C0C;
+}
