--- a/src/theme/elements.css
+++ b/src/theme/elements.css
@@ -96,7 +96,6 @@
 	text-align: center;
 	color: #848484;
 }
-
 /* purchases */
 
 
@@ -195,7 +194,7 @@
 	height: 45px;
 	line-height: 21px;
 	font-size: 15px;
-	border-radius: 100px;
+	border-radius: 22px;
 	border: 1px solid #E1E1E1;
 	outline: none;
 	padding: 12px;
@@ -207,13 +206,11 @@
 
 .form-control__textarea {
 	width: 100%;
-	height: 104px;
-	line-height: 21px;
+	height: 45px;
+	line-height: 19px;
 	font-size: 15px;
 	padding: 12px;
-	padding-top: 16px;
-	padding-bottom: 16px;
-	border-radius: 33px;
+	border-radius: 22px;
 	border: 1px solid #E1E1E1;
 	outline: none;
 	color: var(--ion-text-color);
@@ -222,4 +219,102 @@
 .form-control__textarea::placeholder {
 	color: #848484;
 }
+.form-control__textarea:focus, .form-control__textarea--active {
+	height: 104px;
+	padding: 16px 12px;
+}
+
+.form-control__error--large {
+	font-size: 15px;
+	font-weight: 400;
+	margin-top: 12px;
+}
 /* form-control */
+
+/* bonus-card */
+.bonus-card {
+	background: var(--ion-color-dark);
+	border-radius: 30px;
+	padding: 10px 18px 52px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+}
+
+.bonus-card__header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.bonus-card__header-logo {
+	height: 23px;
+}
+.bonus-card__header-logo img {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.bonus-card__header-count {
+	font-size: 15px;
+	line-height: 18px;
+	font-weight: 500;
+	color: #fff;
+}
+
+.bonus-card__body-logo {
+	height: 77px;
+	margin-bottom: 40px;
+}
+
+.bonus-card__body-logo img {
+	display: block;
+	margin: 0 auto;
+}
+
+.bonus-card__body-info {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+
+.bonus-card__body-fh {
+	display: flex;
+	gap: 12px;
+}
+.bonus-card__body-fv {
+	display: flex;
+	flex-direction: column;
+}
+
+.bonus-card__body-title {
+	color: #BEA68A;
+	font-size: 16px;
+	line-height: 20px;
+	font-weight: 300;
+}
+.bonus-card__body-title--margin {
+	margin-bottom: 8px;
+}
+.bonus-card__body-value {
+	color: #fff;
+	font-size: 16px;
+	line-height: 20px;
+	font-weight: 500;
+}
+.bonus-card__body-value span {
+	color: #848484;
+	font-size: 12px;
+	font-weight: 300;
+}
+
+.bonus-card__footer {
+	text-align: center;
+}
+.bonus-card__footer img {
+	display: block;
+	margin: 0 auto;
+}
+/* bonus-card */
