--- a/src/theme/core.css
+++ b/src/theme/core.css
@@ -78,11 +78,14 @@ ion-title {
 	font-size: 16px;
 	line-height: 30px;
 	text-transform: uppercase;
+	text-align: center;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 ion-toolbar {
-	--padding-top: 18px;
-	--padding-bottom: 18px;
+	/* --padding-top: 18px;
+	--padding-bottom: 18px; */
 	--min-height: 72px;
 	--border-width: 0px !important;
 }
@@ -108,6 +111,13 @@ ion-menu::part(backdrop) {
 
 ion-content.ion-content-menu {
 	--background: var(--ion-color-primary);
+}
+
+ion-footer {
+	box-shadow: none;
+}
+.footer-md {
+	box-shadow: none;
 }
 
 .close-menu-btn {
