--- a/src/theme/ionic.css
+++ b/src/theme/ionic.css
@@ -1,3 +1,10 @@
+@media (prefers-color-scheme: dark) {
+  :root {
+    --ion-background-color: #ffffff;
+    --ion-text-color: #000000;
+  }
+}
+
 ion-toolbar {
 	--padding-start: 18px;
 	--padding-end: 18px;
