--- a/src/theme/elements.css
+++ b/src/theme/elements.css
@@ -116,9 +116,29 @@
 	top: -1px;
 	width: 20px;
 	height: 20px;
+}
+
+.menu-content__link-1::before {
+	background: url('img/menu-link-1.svg') no-repeat;
+}
+.menu-content__link-2::before {
+	background: url('img/menu-link-2.svg') no-repeat;
+}
+.menu-content__link-3::before {
+	background: url('img/menu-link-3.svg') no-repeat;
+}
+
+/* .menu-content__link::before {
+	content: '';
+	display: block;
+	position: absolute;
+	left: 0;
+	top: -1px;
+	width: 20px;
+	height: 20px;
 	border-radius: 3px;
 	background: #fff;
-}
+} */
 
 /* End Menu */
 
